Started implementing GameSetupState and minor fixes